<resources>
    <string name="app_name">Chat+</string>
    <string name="title_chat">聊天</string>
    <string name="title_qChat">快聊</string>
    <string name="title_find">捉迷藏</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="name">Name</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT</string>
    <string name="start_create_btn">CREATE A NEW ACCOUNT</string>
    <string name="welcome">Welcome to Chat+ App</string>
    <string name="Logout">Log Out</string>
    <string name="all_users">All Users</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="login_btn">LOGIN</string>
    <string name="title_activity_map">Map</string>
</resources>
